# cram_perception

./: README.md
cram_perception/: CMakeLists.txt  package.xml
cram_uima/: cram-uima.asd
cram_uima/src/: package.lisp  uima.lisp
robosherlock_process_module/: CMakeLists.txt  package.xml  robosherlock-process-module.asd
robosherlock_process_module/src/: facts.lisp  interface.lisp  package.lisp  process-module.lisp
